--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Torch/Tensorflow model files
-.pth
+*.pth
 
 # Virtual environments
 venv*
 
 # Training data
 data/
+
+# Python related files
+*__pycache__*
